# robot_model_renderer

./: .gitignore  CMakeLists.txt  README.md  nodelet.xml  package.xml  rosdoc.yaml  setup.py
.github/: ci.melodic.rosinstall  ci.noetic.rosinstall
.github/workflows/: ci.yaml
doc/: .gitignore  Makefile  conf.py  index.rst  robot_model_renderer.rst  screenshot.png.license
include/robot_model_renderer/: RobotModelRenderer.h  RobotModelRenderer.hpp  RosCameraRobotModelRenderer.h  RosCameraRobotModelRenderer.hpp  c_api.h  pinhole_camera.h  pinhole_camera.hpp  types.hpp
include/robot_model_renderer/compositors/: OgreCameraDistortion.hh  OgreCameraDistortion.hpp  OgreDistortionPass.hh  OgreInvertColors.hh  OgreInvertColors.hpp  OgreOutline.hh  OgreOutline.hpp  OgreStaticImage.hpp
include/robot_model_renderer/distortion/: OgreDistortionPass.hh  OgreOutline.hh
include/robot_model_renderer/ogre_helpers/: apply_visibility_bits.h  camera_base.h  compatibility.h  compatibility.hpp  compositor.hpp  env_config.h  env_config.hpp  initialization.h  object.h  ogre_logging.h  ogre_logging.hpp  ogre_vector.h  ogre_vector.hpp  orthographic.h  orthographic.hpp  render_system.h  render_system.hpp  shape.h  shape.hpp  version_check.h
include/robot_model_renderer/robot/: link_updater.h  link_updater.hpp  mesh_loader.h  mesh_optimizer.h  mesh_optimizer.hpp  robot.h  robot.hpp  robot_joint.h  robot_joint.hpp  robot_link.h  robot_link.hpp  shape_filter.h  shape_filter.hpp  shape_inflation_registry.h  shape_inflation_registry.hpp  tf_link_updater.h  tf_link_updater.hpp
include/robot_model_renderer/utils/: ogre_opencv.h  sensor_msgs.h  sensor_msgs.hpp  sensor_msgs_ogre.h  validate_floats.h  validate_floats.hpp
launch/: robot_model_renderer.launch
nodelets/: robot_model_renderer_nodelet.cpp
ogre_media/materials/programs/: BlurH_ps20.glsl  BlurV_ps20.glsl  camera_distortion_vs.glsl  camera_mapped_distortion_fs.glsl  inverse_rectification_fs.glsl  invert_color_fs.glsl  outline_edge_fs.glsl  static_image_fs.glsl
ogre_media/materials/scripts/: distortion.compositor  distortion.material  invert_color.compositor  invert_color.material  outline.compositor  outline.material  static_image.compositor  static_image.material
ogre_media/models/: rviz_cube.mesh.license  rviz_cylinder.mesh.license
rviz/: rviz.rviz
src/: RobotModelRenderer.cpp  RosCameraRobotModelRenderer.cpp  c_api.cpp  env_config.cpp.in  pinhole_camera.cpp  robot_model_renderer_node.cpp
src/compositors/: OgreCameraDistortion.cc  OgreDistortionPass.cc  OgreInvertColors.cc  OgreOutline.cc  OgreStaticImage.cc
src/distortion/: OgreDistortionPass.cc  OgreOutline.cc
src/ogre_helpers/: apply_visibility_bits.cpp  camera_base.cpp  compositor.cpp  initialization.cpp  object.cpp  ogre_logging.cpp  orthographic.cpp  render_system.cpp  shape.cpp
src/robot/: mesh_loader.cpp  mesh_optimizer.cpp  robot.cpp  robot_joint.cpp  robot_link.cpp  shape_filter.cpp  shape_inflation_registry.cpp  tf_link_updater.cpp
src/robot_model_renderer/: __init__.py  cras_bag_tools_plugin.py  msg.py  renderer.py  types.py
src/utils/: ogre_opencv.cpp  sensor_msgs.cpp  sensor_msgs_ogre.cpp
test/: robot.urdf  test_robot_model_renderer.cpp  test_robot_model_renderer.py  test_robot_model_renderer.test  test_robot_model_renderer_nodelet.cpp
