<?xml version="1.0"?>
<!--
SPDX-License-Identifier: BSD-3-Clause
SPDX-FileCopyrightText: Czech Technical University in Prague
-->
<package format="3">
  <name>robot_model_renderer</name>
  <version>1.1.0</version>
  <description>Render or mask out URDF robot model from the camera view.</description>

  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

  <depend>cras_cpp_common</depend>
  <depend>geometry_msgs</depend>
  <depend>image_geometry</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>urdf</depend>

  <build_depend>assimp</build_depend>
  <build_depend>assimp-dev</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>libglew-dev</build_depend>
  <build_depend>libogre-dev</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>opengl</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>resource_retriever</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>

  <build_export_depend>boost</build_export_depend>
  <build_export_depend>libogre</build_export_depend>
  <build_export_depend>libopencv-dev</build_export_depend>

  <exec_depend>assimp</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>libogre</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>opengl</exec_depend>
  <exec_depend>resource_retriever</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-catkin-lint</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-catkin-lint</test_depend>
  <test_depend>roslaunch</test_depend>
  <test_depend>roslint</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>tf2_msgs</test_depend>
  <test_depend>xvfb</test_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet.xml" />
  </export>
</package>
